docs/0.18.2/_sources/api/gammapy.maps.RegionNDMap.rst.txt
RegionNDMap
===========

.. currentmodule:: gammapy.maps

.. autoclass:: RegionNDMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~RegionNDMap.data
      ~RegionNDMap.geom
      ~RegionNDMap.meta
      ~RegionNDMap.quantity
      ~RegionNDMap.tag
      ~RegionNDMap.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~RegionNDMap.apply_edisp
      ~RegionNDMap.coadd
      ~RegionNDMap.copy
      ~RegionNDMap.create
      ~RegionNDMap.crop
      ~RegionNDMap.cutout
      ~RegionNDMap.downsample
      ~RegionNDMap.fill_by_coord
      ~RegionNDMap.fill_by_idx
      ~RegionNDMap.fill_by_pix
      ~RegionNDMap.fill_events
      ~RegionNDMap.from_geom
      ~RegionNDMap.from_hdulist
      ~RegionNDMap.from_images
      ~RegionNDMap.get_by_coord
      ~RegionNDMap.get_by_idx
      ~RegionNDMap.get_by_pix
      ~RegionNDMap.get_image_by_coord
      ~RegionNDMap.get_image_by_idx
      ~RegionNDMap.get_image_by_pix
      ~RegionNDMap.get_spectrum
      ~RegionNDMap.interp_by_coord
      ~RegionNDMap.interp_by_pix
      ~RegionNDMap.interp_to_geom
      ~RegionNDMap.iter_by_image
      ~RegionNDMap.pad
      ~RegionNDMap.plot
      ~RegionNDMap.plot_grid
      ~RegionNDMap.plot_hist
      ~RegionNDMap.plot_interactive
      ~RegionNDMap.plot_region
      ~RegionNDMap.read
      ~RegionNDMap.reduce
      ~RegionNDMap.reduce_over_axes
      ~RegionNDMap.resample_axis
      ~RegionNDMap.set_by_coord
      ~RegionNDMap.set_by_idx
      ~RegionNDMap.set_by_pix
      ~RegionNDMap.slice_by_idx
      ~RegionNDMap.stack
      ~RegionNDMap.sum_over_axes
      ~RegionNDMap.to_cube
      ~RegionNDMap.to_hdulist
      ~RegionNDMap.to_table
      ~RegionNDMap.upsample
      ~RegionNDMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom
   .. autoattribute:: meta
   .. autoattribute:: quantity
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: apply_edisp
   .. automethod:: coadd
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: cutout
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: fill_events
   .. automethod:: from_geom
   .. automethod:: from_hdulist
   .. automethod:: from_images
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: get_image_by_coord
   .. automethod:: get_image_by_idx
   .. automethod:: get_image_by_pix
   .. automethod:: get_spectrum
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: interp_to_geom
   .. automethod:: iter_by_image
   .. automethod:: pad
   .. automethod:: plot
   .. automethod:: plot_grid
   .. automethod:: plot_hist
   .. automethod:: plot_interactive
   .. automethod:: plot_region
   .. automethod:: read
   .. automethod:: reduce
   .. automethod:: reduce_over_axes
   .. automethod:: resample_axis
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: slice_by_idx
   .. automethod:: stack
   .. automethod:: sum_over_axes
   .. automethod:: to_cube
   .. automethod:: to_hdulist
   .. automethod:: to_table
   .. automethod:: upsample
   .. automethod:: write
